# FlaskBlog

./: .dockerignore  .env.dist  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  gunicorn.conf.py  pyproject.toml  requirements.txt  uwsgi.py  wsgi.py
app/: __init__.py  config.py  utils.py
app/admin/: adminviews.py
app/database/: dbfuncs.py  dbmodels.py
app/errors/: errorviews.py
app/posts/: mainpage.py  postsviews.py  postswtforms.py  searchviews.py
app/templates/: baseposts.html  baseverification.html  index.html
app/templates/admin/: index.html
app/templates/email/: infopswemail.html  resetpswemail.html
app/templates/errors/: notfounderror.html  servererror.html
app/templates/posts/: articledetail.html  articles.html  createarticle.html  createnewspost.html  editarticle.html  editnewspost.html  main.html  news.html  search.html
app/templates/user/: authors.html  editprofile.html  profile.html
app/templates/verification/: forgotpassword.html  newpassword.html  registration.html  signin.html
app/user/: authors.py  profileviews.py  profilewtforms.py  resetpswviews.py  verifyviews.py  verifywtforms.py
migrations/versions/: 9909b64496a7_initial.py  a083a6c1dab6_initial.py  c346fb101cfd_initial.py
requirements/: dev.txt  prod.txt
src/: __init__.py  celery.py  clickcommands.py  config.py  dependencies.py  main.py  models.py  repositories.py  services.py  utils.py
src/admin/: admin_views.py  adminviews.py
src/auth/: auth_services.py  auth_utils.py  auth_views.py  auth_wtforms.py  authutils.py  authviews.py  authwtforms.py  resetpswviews.py
src/config/: enviroment.py  settings.py
src/core/dependencies/: container.py
src/core/exceptions/: base.py
src/core/models/: sqlalchemy.py
src/core/repositories/: sqlalchemy.py
src/core/workers/: celery.py
src/database/: dbmodels.py  enums.py
src/error/: error_views.py  errorviews.py
src/errors/: errorviews.py
src/modules/auth/: exceptions.py
src/modules/post/: exceptions.py
src/modules/user/: exceptions.py
src/post/: main_views.py  mainpage.py  post_exceptions.py  post_models.py  post_repositories.py  post_services.py  post_views.py  post_wtforms.py  postenums.py  postmodels.py  postservice.py  postutils.py  postviews.py  postwtforms.py
src/static/js/: postformactions.js
src/templates/: baseauth.html  basepost.html  basesite.html  index.html
src/templates/admin/: index.html
src/templates/auth/: forgot_password.html  forgotpassword.html  login.html  newpassword.html  registration.html  reset_password.html  signin.html
src/user/: user_exceptions.py  user_models.py  user_repositories.py  user_services.py  user_views.py  user_wtforms.py  userenums.py  usermodels.py  userservice.py  userutils.py  userviews.py  userwtforms.py
tests/: conftest.py  sqlalchemy.py  testutils.py  utils.py
tests/views/: test_admin_views.py  test_adminviews.py  test_auth_views.py  test_authviews.py  test_clickcommands.py  test_main_page.py  test_mainpage.py  test_post_views.py  test_postviews.py  test_profile_views.py  test_profileviews.py  test_userviews.py
(+63 files in other folders)
