[tool.poetry]
name = "FlaskBlog"
version = "0.2.0"
description = ""
authors = ["stcdbe <samthomascolddeadblueeyes@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
flask = "^3.0.2"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.5"
psycopg2-binary = "^2.9.9"
flask-login = "^0.6.3"
flask-admin = "^1.6.1"
flask-jwt-extended = "^4.6.0"
flask-wtf = "^1.2.1"
pillow = "^10.2.0"
celery = "^5.3.6"
redis = "^5.0.1"
python-slugify = "^8.0.4"
email-validator = "^2.1.0.post1"
flask-injector = "^0.15.0"
gunicorn = "^21.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
